--- a/server/views/partials/header.partial.jade
+++ b/server/views/partials/header.partial.jade
@@ -5,7 +5,4 @@ header
     svg(viewBox="0 0 100 100" class="menu-icon" role="button" aria-controls="mainNav" aria-expanded="false" aria-label="navigation menu")
       use(xlink:href="#menu")
     nav(id="mainNav" role="menubar" aria-expanded="false" aria-hidden="true")
-      //- ul(role="menu")
-      //-   each item in mainNav
-      //-     li(role="menuitem")
-      //-       a(href="#{item.href}") #{item.text}
+      //- MainNavigation
